Update on Overleaf.

--- a/template/references.bib
+++ b/template/references.bib
@@ -1,26 +1,15 @@
-
-
-@inproceedings{kour2014real,
-  title={Real-time segmentation of on-line handwritten arabic script},
-  author={Kour, George and Saabne, Raid},
-  booktitle={Frontiers in Handwriting Recognition (ICFHR), 2014 14th International Conference on},
-  pages={417--422},
-  year={2014},
-  organization={IEEE}
+@article{Chepel_2013,
+   title={Liquid noble gas detectors for low energy particle physics},
+   volume={8},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/8/04/R04001},
+   DOI={10.1088/1748-0221/8/04/r04001},
+   number={04},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Chepel, V and Araújo, H},
+   year={2013},
+   month={Apr},
+   pages={R04001–R04001}
 }
 
-@inproceedings{kour2014fast,
-  title={Fast classification of handwritten on-line Arabic characters},
-  author={Kour, George and Saabne, Raid},
-  booktitle={Soft Computing and Pattern Recognition (SoCPaR), 2014 6th International Conference of},
-  pages={312--318},
-  year={2014},
-  organization={IEEE}
-}
-
-@article{hadash2018estimate,
-  title={Estimate and Replace: A Novel Approach to Integrating Deep Neural Networks with Existing Applications},
-  author={Hadash, Guy and Kermany, Einat and Carmeli, Boaz and Lavi, Ofer and Kour, George and Jacovi, Alon},
-  journal={arXiv preprint arXiv:1804.09028},
-  year={2018}
-}
